# endless-journey

./: README.md  docker-compose.yml
backend/: README.md  geojson_importer.py  pyproject.toml
backend/app/: main.py  test_main.py
backend/prisma/: db.sqlite3  db.sqlite3-journal  schema.prisma
backend/prisma/migrations/20240611002234_init/: migration.sql
backend/prisma/migrations/20250428045228_place_init/: migration.sql
backend/scratch/: first_data.geojson
backend/src/fastapi_prisma/: main.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/lib/api/: todos.ts
frontend/src/routes/: +page.server.ts  +page.svelte
frontend/src/routes/todos/[id]/: +page.server.ts
