[project]
name = "fastapi-prisma-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "geojson-pydantic>=1.2.0",
    "prisma>=0.15.0",
    "pydantic>=2.10.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "ruff>=0.9.2",
]
